--- a/css/base.css
+++ b/css/base.css
@@ -48,14 +48,7 @@
 	font-size: 1.2rem;
 	border: 0px;
 }
-.header_top_name{
-	color: #EF4996;
-	font-size: 2rem;
-}
-.header_top_name:hover{
-	text-decoration: none;
-	color:#EF4996; 
-}
+
 .bg-f5{
 	background: #f5f5f5;
 }
@@ -90,7 +83,6 @@ a{
 	
 }
 a:hover{
-	color: #FF5777;
+	color: #FF2156/* #FF5777 */;
 	text-decoration: none;
-
 }
