--- a/css/header.css
+++ b/css/header.css
@@ -1,33 +1,43 @@
+.header_top_name{
+	color: #FF2156;
+	font-size: 2rem;
+}
+.header_top_name:hover{
+	text-decoration: none;
+	color:#FF2156; 
+}
 .header_top_a{
 	text-decoration: none;
 	color: #333131;
 	font-size: 0.7rem;
 	font-weight: bold;
+	border-right: 1px solid #333131;
+	padding-top: 0px;
+	padding-bottom: 0px;
 
 }
 .header_top_a:hover{
 	text-decoration: none;
 	color: #333131;
 }
-
-
 .nav_btn{
 	font-size: 0.7rem;
 	width: 5rem;
-    color: #333131; 
+    color: #333131;
+      
 }
 .top_btn{
 	font-size: 1.1rem;
 	padding-left: 1rem;
 	color: #EF4996;
 }
-
-
-
+.nav_a{
+	border-right: 1px solid #FF2156;
+	padding-right: 0.6rem;
+	padding-left: 0.6rem;
+}
 .nav_a:hover{
 	text-decoration: none;
 }
 
-b{
-	color: #DBD8D8;
-}
+
