--- a/css/products_women.css
+++ b/css/products_women.css
@@ -68,4 +68,13 @@
 	height: 2rem;
 	line-height: 1.7rem;
 }
-
+.similar_item{
+	width: 30%;
+}
+.haixianggou_item{
+	width: 60%
+}
+.haixianggou_title{
+	line-height:2.5rem;
+	margin: 0 auto;
+}
