--- a/css/user_register.css
+++ b/css/user_register.css
@@ -1,5 +1,5 @@
 .register_box{
-	border: 1px solid black;	
+	border: 1px solid #404040;	
 	margin: 3rem auto; 	
 	width: 25rem;
 	border-radius: 10px;
